Fix start page, add express

--- a/public/index.html
+++ b/public/index.html
@@ -14,10 +14,40 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
     />
+    <meta property="og:title" content="Parrot wings app" />
+    <meta property="vk:title" content="Parrot wings app" />
+    <meta property="twitter:title" content="Parrot wings app" />
+    <meta property="og:type" content="website" />
+    <meta property="og:description" content="Virtual money transfers" />
+    <meta property="vk:description" content="Virtual money transfers" />
+    <meta property="twitter:description" content="Virtual money transfers" />
+    <meta
+      property="og:image"
+      content="https://res.cloudinary.com/dqmh9epb9/image/upload/v1603959575/parrotWings/parrot_dafkvw.jpg"
+    />
+    <meta
+      property="twitter:image"
+      content="https://res.cloudinary.com/dqmh9epb9/image/upload/v1603959575/parrotWings/parrot_dafkvw.jpg"
+    />
+    <meta
+      property="vk:image"
+      content="https://res.cloudinary.com/dqmh9epb9/image/upload/v1603959575/parrotWings/parrot_dafkvw.jpg"
+    />
+    <meta
+      property="og:image:secure_url"
+      content="https://res.cloudinary.com/dqmh9epb9/image/upload/v1603959575/parrotWings/parrot_dafkvw.jpg"
+    />
+    <meta
+      property="twitter:image:secure_url"
+      content="https://res.cloudinary.com/dqmh9epb9/image/upload/v1603959575/parrotWings/parrot_dafkvw.jpg"
+    />
+    <meta
+      property="vk:image:secure_url"
+      content="https://res.cloudinary.com/dqmh9epb9/image/upload/v1603959575/parrotWings/parrot_dafkvw.jpg"
+    />
+    <meta property="og:sitename" content="Parrot wings app" />
 
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-
-    <title>Virtual money</title>
+    <title>Parrot wings</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
